# ResumeMatchPro

./: README.md  docker-compose.yml
azfunctions/: function_app.py  readme.md  requirements.txt  temp.py
azfunctions/file_processing/: file_processing.py  schemas.py
azfunctions/file_upload/: file_upload.py  schemas.py
azfunctions/matching/: matching.py  schemas.py
azfunctions/shared/: blob_service.py  db_service.py  document_intelligence_service.py  docx_service.py  files_repository.py  matching_results_repository.py  models.py  queue_service.py
azfunctions/shared/openai_service/: models.py  openai_service.py
azfunctions/tests/: test_files_repository.py  test_matching_results_repository.py  test_openai_service.py  test_queue_service.py
backend/: Dockerfile  README.md  pyproject.toml  run_alembic.cmd  start.sh
backend/alembic/: alembic.ini
backend/alembic/alembic/: env.py
backend/alembic/alembic/versions/: ab699ba6fc77_added_city_and_country_models.py
backend/alembic/migrations/: env.py
backend/alembic/migrations/versions/: cd634dcd210e_first_async.py
backend/app/: database.py  main.py  models.py
backend/application/: database.py  main.py  models.py  schemas.py
backend/application/cities/: models.py  router.py  schemas.py  service.py
backend/tests/: test_main.py
frontend/: package-lock.json
frontend/src/: App.js
frontend/src/context/: AuthContext.js
frontend/src/hooks/: useAuth.js
frontend/src/pages/: AboutPage.js
frontend/src/services/: authService.js  dataService.js
frontend/src/utils/: httpClient.js
(+4 files in other folders)
